# Barnes2019-DggBestOrientations

./: .gitignore  CMakeLists.txt  GeoStuff.cpp  GeoStuff.hpp  Icosa.cpp  Icosa.hpp  IndexedShapefile.cpp  IndexedShapefile.hpp  Makefile  Makefile.cori  Makefile.xsede  NOTES.md  Orientation.cpp  Orientation.hpp  OrientationIndex.cpp  OrientationIndex.hpp  POI.cpp  POI.hpp  Point.cpp  Point.hpp  PointCloud.cpp  PointCloud.hpp  Polygon.cpp  Polygon.hpp  Progress.cpp  Progress.hpp  README.md  Solid.cpp  Solid.hpp  SpIndex.cpp  SpIndex.hpp  Timer.cpp  Timer.hpp  cpp_attempt.cpp  dgg.job  dgg_best_poles.py  displayer.py  job_gen.py  main.cpp  nanoflann.hpp  (+3 more)
jobs/: cuboctahedron_max_avg_dist.job  cuboctahedron_max_edge.job  cuboctahedron_min_avg_dist.job  cuboctahedron_min_edge.job  dgg-cori.job  dgg.job  poi.job  regular_dodecahedron_max_avg_dist.job  regular_dodecahedron_max_edge.job  regular_dodecahedron_min_avg_dist.job  regular_dodecahedron_min_edge.job  regular_icosahedron_max_avg_dist.job  regular_icosahedron_max_edge.job  regular_icosahedron_min_avg_dist.job  regular_icosahedron_min_edge.job  regular_octahedron_max_avg_dist.job  regular_octahedron_max_edge.job  regular_octahedron_min_avg_dist.job  regular_octahedron_min_edge.job  regular_tetrahedron_max_avg_dist.job  regular_tetrahedron_max_edge.job  regular_tetrahedron_min_avg_dist.job  regular_tetrahedron_min_edge.job
